Bold text showing on mobile devices fixed

--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ main h2 {
 
 main p {
 
-    font-family: "Handlee", sans-serif;
+    font-family: Mali, sans-serif;
     font-size: 24px;
     width: 50%;
     margin: auto;
