--- a/css/las-canchas.css
+++ b/css/las-canchas.css
@@ -1,18 +1,13 @@
 
 /* FONTS FROM GOOGLE API */
 
-@import url("https://fonts.googleapis.com/css?family=Ubuntu|Handlee|Rampart One|Poppins|Dancing Script");
-@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Ubuntu|Rampart One|Poppins");
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Mali:wght@400;700&display=swap");
+
 :root {
 
     --main-color: rgb(12, 170, 223);
 
-}
-
-b {
-
-    font-weight: bolder;
 }
 
 /* BODY RESET TO MAKE USE OF FULL WIDTH */
